// Copyright 2024-2025 CardinalHQ, Inc
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package chqpb;

option go_package = ".;chqpb";

// Represents a single exemplar entry.
message Exemplar {
  string payload = 1;
  map<string, string> attributes = 2;
  int64 partition_id = 3;
}

// Represents a report containing a batch of exemplars to be published.
message ExemplarPublishReport {
  string organization_id = 1;
  string processor_id = 2;
  string telemetry_type = 3;
  repeated Exemplar exemplars = 4;
}