// Copyright 2024-2025 CardinalHQ, Inc
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package chqpb;

option go_package = ".;chqpb";


// A single span sketch for a metric and timeseries
message SpanSketchProto {
  string metric_name = 1;
  int64 tid = 5;
  int64 interval = 6;
  // Map of tag key to tag value
  map<string, string> tags = 7;
  // Encoded DDSketch bytes
  bytes sketch = 8;
  int64 total_count = 9;
  int64 error_count = 10;
  int64 exception_count = 11;
  // fingerprint -> exception message
  map<int64, string> exceptions_map = 12;
  // fingerprint -> exception occurrences
  map<int64, int64> exception_counts_map = 13;
  int64 parentTID = 14;
}

// Wrapper for a list of span sketches to emit in a single batch
message SpanSketchList {
  repeated SpanSketchProto sketches = 1;
  string customer_id = 2;
}